--- a/hwprovisioner/allocate/webapp/swagger/allocate.yml
+++ b/hwprovisioner/allocate/webapp/swagger/allocate.yml
@@ -10,6 +10,43 @@ consumes:
 produces:
   - application/json
 paths:
+  /inventory:
+    get:
+      tags: [Inventory]
+      operationId: webapp.inventory.get_all
+      summary: Get all items from the inventory
+      responses:
+        200:
+          description: Return all items from the inventory
+          schema:
+            type: object
+            properties:
+              status:
+                type: integer
+                description: The status for the operation
+                example: 200
+              data:
+                type: array
+                items:
+                  $ref: '#/definitions/Inventory'
+  /inventory/{inventory_id}:
+    get:
+      tags: [Inventory]
+      operationId: webapp.inventory.get_one
+      summary: Get all items from the inventory
+      parameters:
+        - $ref: '#/parameters/inventory_id'
+      responses:
+        200:
+          description: Return all items from the inventory
+          schema:
+            properties:
+              status:
+                type: integer
+                description: The status for the operation
+                example: 200
+              data:
+                $ref: '#/definitions/Inventory'
 
 parameters:
   inventory_id:
