TMTNNFR-29: jumping out a directory when running pylint so that it can scan the current directories module

--- a/hwprovisioner/allocate/Makefile
+++ b/hwprovisioner/allocate/Makefile
@@ -4,7 +4,7 @@ PYTHON_MODULES = $(shell basename $(CURDIR))
 export PYTHON_MODULES
 PYTHON_COVERAGE = webapp
 export PYTHON_COVERAGE
-PYTHONPATH = .
+PYTHONPATH = $(CURDIR)
 export PYTHONPATH
 
 .PHONY: help
