--- a/pytest.ini
+++ b/pytest.ini
@@ -1,6 +1,10 @@
 [pytest]
-log_cli = 1
+log_cli = True
 log_cli_level = INFO
-log_cli_format = %(asctime)s [%(levelname)8s] %(message)s (%(filename)s:%(lineno)s)
+log_cli_format = %(asctime)s [%(levelname)8s] (%(filename)s:%(lineno)s) %(message)s
 log_cli_date_format=%Y-%m-%d %H:%M:%S
-log_file_path = output1.log
+
+log_file = output.log
+log_file_format = %(asctime)s [%(levelname)8s] (%(filename)s:%(lineno)s) %(message)s
+log_file_level = INFO
+log_file_date_format=%Y-%m-%d %H:%M:%S
