--- a/Dockerfile.hypervisor
+++ b/Dockerfile.hypervisor
@@ -3,9 +3,10 @@ FROM ubuntu:18.10
 RUN  apt update -y && \
      apt install -y python3.7\
      libvirt-daemon python3-libvirt python3-pip\
-     sudo pciutils
+     sudo pciutils kmod
 
-RUN pip3 install aiohttp munch jinja2
+
+RUN pip3 install aiohttp munch jinja2 PyYAML
 
 COPY tools/vfio-pci-bind.sh /usr/local/bin/
 COPY  * /root/
