--- a/Dockerfile.hypervisor
+++ b/Dockerfile.hypervisor
@@ -3,7 +3,9 @@ FROM ubuntu:18.10
 RUN  apt update -y && \
      DEBIAN_FRONTEND=noninteractive apt install -y python3.7\
      libvirt-daemon python3-libvirt python3-pip\
-     sudo pciutils kmod
+     sudo pciutils kmod &&\
+     apt-get -y autoclean && \
+     apt-get -y autoremove
 
 
 RUN pip3 install aiohttp munch jinja2 PyYAML
