--- a/Pipfile
+++ b/Pipfile
@@ -69,6 +69,7 @@ Pillow = "==6.2.1"
 PyMySQL = "==0.9.3"
 PyNaCl = "==1.3.0"
 Pygments = "==2.4.2"
+pyyaml = "*"
 
 [requires]
 python_version = "3.7"
