--- a/Pipfile
+++ b/Pipfile
@@ -70,6 +70,8 @@ PyMySQL = "==0.9.3"
 PyNaCl = "==1.3.0"
 Pygments = "==2.4.2"
 pyyaml = "*"
+psycopg2 = "*"
+defaultlist = "*"
 
 [requires]
 python_version = "3.7"
