Add ffmpeg to docker

--- a/Dockerfile_local
+++ b/Dockerfile_local
@@ -4,7 +4,7 @@ LABEL maintainer="orielh@anyvision.co"
 COPY  ./requirements3.txt /tmp/requirements3.txt
 
 RUN apt-get update && apt-get install -y --no-install-recommends \
-    python3-pip python3-dev python3-setuptools vim sudo libpq-dev gcc \
+    python3-pip python3-dev python3-setuptools vim sudo libpq-dev gcc ffmpeg \
   && ln -s /usr/bin/python3 /usr/local/bin/python \
   && pip3 install --upgrade pip \
   && apt-get clean && apt-get autoremove && rm -rf /var/lib/apt/lists/*
