--- a/Dockerfile_local
+++ b/Dockerfile_local
@@ -5,6 +5,7 @@ COPY  ./requirements3.txt /tmp/requirements3.txt
 
 RUN apt-get update && apt-get install -y --no-install-recommends \
     python3-pip python3-dev python3-setuptools vim sudo libpq-dev gcc libavdevice-dev pkg-config \
+    iputils-ping \
   && ln -s /usr/bin/python3 /usr/local/bin/python \
   && pip3 install --upgrade pip \
   && apt-get clean && apt-get autoremove && rm -rf /var/lib/apt/lists/*
