--- a/hwprovisioner/allocate/Dockerfile
+++ b/hwprovisioner/allocate/Dockerfile
@@ -1,20 +1,18 @@
 FROM python:3.6.9-alpine3.9 as build
 
 RUN apk add --no-cache \
-        jq==1.6-r0 \
         build-base==0.5-r1 \
-        gcc==8.3.0-r0
+        gcc==8.3.0-r0 \
+        python3-dev==3.6.9-r2
 
-COPY ./Pipfile.lock /src/Pipfile.lock
+RUN pip3 install \
+        pipenv==2018.11.26
+COPY ./Pipfile /src/Pipfile
 WORKDIR /src
-RUN jq -r '.default \
-        | to_entries[] \
-        | .key + .value.version' \
-    Pipfile.lock > requirements.txt
 RUN echo 'manylinux1_compatible = True' > /usr/local/lib/python3.6/site-packages/_manylinux.py
-RUN pip3 install -r requirements.txt
-
-RUN apk del jq build-base gcc
+RUN pipenv lock && pipenv install --dev --system
+RUN apk del build-base gcc python3-dev && \
+    pip3 uninstall -y pipenv
 
 COPY . /src/
 
