--- a/Dockerfile.hypervisor
+++ b/Dockerfile.hypervisor
@@ -2,13 +2,13 @@ FROM ubuntu:18.10
 
 RUN  apt update -y && \
      DEBIAN_FRONTEND=noninteractive apt install -y python3.7\
-     libvirt-daemon python3-libvirt python3-pip\
+     libvirt-daemon python3-libvirt python3-pip iproute2\
      sudo pciutils kmod &&\
      apt-get -y autoclean && \
      apt-get -y autoremove
 
 
-RUN pip3 install aiohttp munch jinja2 PyYAML
+RUN pip3 install aiohttp munch jinja2 PyYAML netifaces ipaddress
 
 COPY tools/vfio-pci-bind.sh /usr/local/bin/
 COPY . /root/
