--- a/Dockerfile.hypervisor
+++ b/Dockerfile.hypervisor
@@ -8,7 +8,7 @@ RUN  apt update -y && \
      apt-get -y autoremove
 
 
-RUN pip3 install aiohttp munch jinja2 PyYAML netifaces ipaddress
+RUN pip3 install aiohttp munch jinja2 PyYAML netifaces ipaddress xmltodict
 
 COPY tools/vfio-pci-bind.sh /usr/local/bin/
 COPY . /root/
