--- a/Dockerfile_local
+++ b/Dockerfile_local
@@ -4,7 +4,7 @@ LABEL maintainer="orielh@anyvision.co"
 COPY  ./requirements3.txt /tmp/requirements3.txt
 
 RUN apt-get update && apt-get install -y --no-install-recommends \
-    python3-pip python3-dev python3-setuptools vim sudo libpq-dev gcc libavdevice-dev pkg-config \
+    python3-pip python3-dev python3-setuptools vim sudo libpq-dev gcc libavdevice-dev pkg-config libsm6 libxext6 libxrender-dev\
     iputils-ping sshpass openssh-client \
   && ln -s /usr/bin/python3 /usr/local/bin/python \
   && pip3 install --upgrade pip \
