cloud-provisioner: docker file with buildkit
  change docker fiule to buildkit in order to clone priavte terraform repo

--- a/Dockerfile.cloud_provisioner
+++ b/Dockerfile.cloud_provisioner
@@ -1,3 +1,4 @@
+# syntax=docker/dockerfile:experimental
 FROM ubuntu:18.04
 
 ARG DEBIAN_FRONTEND=noninteractive
@@ -14,13 +15,14 @@ RUN apt-get update && apt-get install -y \
 RUN pip3 install aiohttp python-terraform
 
 COPY . /root/cloud-provisioner
-
-RUN git clone https://github.com/AnyVisionltd/terraform.git
+COPY credentials /root/.aws/credentials
+RUN mkdir -p -m 0600 ~/.ssh && ssh-keyscan github.com >> ~/.ssh/known_hosts
+RUN --mount=type=ssh git clone git@github.com:AnyVisionltd/terraform.git /root/terraform
 RUN wget https://releases.hashicorp.com/terraform/${TERRAFORM_VERSION}/terraform_${TERRAFORM_VERSION}_linux_amd64.zip
 RUN unzip terraform_${TERRAFORM_VERSION}_linux_amd64.zip -d /usr/local/bin/
 RUN chmod +x /usr/local/bin/terraform
-WORKDIR /root/terraform/projects
-ENTRYPOINT ["python3", "/root/cloud-provisioner", "plan"]
+WORKDIR /root/cloud-provisioner
+ENTRYPOINT ["python3", "/root/cloud-provisioner/lab/vms/cloud_resource_manager.py"]
 
 
 
