--- a/.gitignore
+++ b/.gitignore
@@ -5,6 +5,7 @@
 ### Linux ###
 *~
 .idea
+credentials
 # temporary files which can be created if a process still has a handle open of a deleted file
 .fuse_hidden*
 
