--- a/Dockerfile.cloud_provisioner
+++ b/Dockerfile.cloud_provisioner
@@ -10,6 +10,7 @@ RUN apt-get update && apt-get install -y \
     python3-pip \
     git \
     unzip \
+    vim \
     wget
 
 RUN pip3 install aiohttp python-terraform
