--- a/Dockerfile_local
+++ b/Dockerfile_local
@@ -5,10 +5,14 @@ COPY  ./requirements3.txt /tmp/requirements3.txt
 
 RUN apt-get update && apt-get install -y --no-install-recommends \
     python3-pip python3-dev python3-setuptools vim sudo libpq-dev gcc libavdevice-dev pkg-config libsm6 libxext6 libxrender-dev\
-    iputils-ping sshpass openssh-client \
+    iputils-ping sshpass openssh-client git \
   && ln -s /usr/bin/python3 /usr/local/bin/python \
   && pip3 install --upgrade pip \
   && apt-get clean && apt-get autoremove && rm -rf /var/lib/apt/lists/*
+
+# Set the locale
+ENV LANG C.UTF-8
+ENV LC_ALL C.UTF-8
 
 RUN pip3 install -r /tmp/requirements3.txt \
   && rm /tmp/requirements3.txt
