--- a/Pipfile
+++ b/Pipfile
@@ -74,6 +74,9 @@ psycopg2 = "*"
 defaultlist = "*"
 numpy = "*"
 pytest-timeout = "*"
+Faker = "==4.0.1"
+python-socketio = "==4.4.0"
+prometheus-http-clint = {git = "https://github.com/tomoncle/prometheus-http-client", editable = true, ref = "master"}
 
 [requires]
 python_version = "3.7"
