--- a/requirements3.txt
+++ b/requirements3.txt
@@ -71,3 +71,6 @@ psycopg2==2.8.4
 av==6.2.0
 numpy==1.18.1
 pytest-timeout==1.3.4
+Faker==4.0.1
+python-socketio==4.4.0
+git+https://github.com/tomoncle/prometheus-http-client@master#prometheus-http-client
