--- a/Pipfile
+++ b/Pipfile
@@ -76,6 +76,7 @@ numpy = "*"
 pytest-timeout = "*"
 Faker = "==4.0.1"
 python-socketio = "==4.4.0"
+pyyaml==3.12
 prometheus-http-clint = {git = "https://github.com/tomoncle/prometheus-http-client", editable = true, ref = "master"}
 
 [requires]
