--- a/requirements3.txt
+++ b/requirements3.txt
@@ -74,3 +74,4 @@ pytest-timeout==1.3.4
 Faker==4.0.1
 python-socketio==4.4.0
 git+https://github.com/tomoncle/prometheus-http-client@master#prometheus-http-client
+ipdb
