--- a/Pipfile
+++ b/Pipfile
@@ -9,6 +9,7 @@ black = "==19.3b0"
 flake8 = "==3.7.9"
 
 [packages]
+aiohttp = "==3.6.2"
 apipkg = "==1.5"
 atomicwrites = "==1.3.0"
 attrs = "==19.3.0"
@@ -70,7 +71,6 @@ PyMySQL = "==0.9.3"
 PyNaCl = "==1.3.0"
 Pygments = "==2.4.2"
 pyyaml = "*"
-psycopg2 = "*"
 defaultlist = "*"
 numpy = "*"
 pytest-timeout = "*"
