--- a/hwprovisioner/resourcemanager/Pipfile
+++ b/hwprovisioner/resourcemanager/Pipfile
@@ -5,6 +5,7 @@ verify_ssl = true
 
 [dev-packages]
 radon = "==4.0.0"
+bandit = "==1.6.2"
 black = "==19.3b0"
 flake8 = "==3.7.9"
 pytest = "==5.3.1"
