--- a/hwprovisioner/heartbeats/Pipfile
+++ b/hwprovisioner/heartbeats/Pipfile
@@ -14,6 +14,7 @@ pytest-cov = "==2.8.1"
 pylint = "==2.4.4"
 argh = "==0.26.2"
 watchdog = "==0.10.0"
+asynctest = "==0.13.0"
 
 [packages]
 connexion = {extras = ["swagger-ui"],version = "*"}
