requirements3.txt pipfile: added rpyc

--- a/Pipfile
+++ b/Pipfile
@@ -78,6 +78,7 @@ Faker = "==4.0.1"
 python-socketio = "==4.4.0"
 prometheus-http-clint = {git = "https://github.com/tomoncle/prometheus-http-client",editable = true,ref = "master"}
 ipdb = "*"
+rpyc = "*"
 
 [requires]
 python_version = "3.7"
