--- a/dev_environment/makefiles/Makefile.git
+++ b/dev_environment/makefiles/Makefile.git
@@ -5,8 +5,8 @@ git-install:
 
 ifeq ($(OS),ubuntu)
 	@echo "Installing git cli on $(OS)"
-	sudo apt update
-	sudo apt install -y git
+	sudo apt-get -qq update
+	sudo apt-get -q install -y git
 	git --version
 
 else ifeq ($(OS),red)
