cloud-provisioner: PR review fixes
  fixed wget and curl duplication
  fixed typo errors
  fixed path to cred in docker compose

--- a/docker-compose.cloud_resource_manager.yaml
+++ b/docker-compose.cloud_resource_manager.yaml
@@ -19,7 +19,7 @@ services:
 
     volumes:
       # credentials for aws mounted from local dir
-      - /home/aharon/.aws/credentials:/root/.aws/credentials
+      - /path/to/.aws/credentials:/root/.aws/credentials
 #      - .:/root/cloud-provisioner
 #      - /home/aharon/PycharmProjects/terraform:/root/terraform
 
