daemonset: add toleration to tolerate everything
this will ignore node taintes and will schedualed the automation-proxy
pod in all the nodes

--- a/docker_build/daemonset.yaml
+++ b/docker_build/daemonset.yaml
@@ -25,6 +25,8 @@ spec:
       # hostNetwork: true
       # dnsPolicy: ClusterFirstWithHostNet
       terminationGracePeriodSeconds: 2
+      tolerations:
+      - operator: Exists # matches all keys, values and effects which means this will tolerate everything
       containers:
       - name: automation-proxy
         image: gcr.io/anyvision-training/automation-proxy:master
