--- a/requirements3.txt
+++ b/requirements3.txt
@@ -61,7 +61,6 @@ confluent-kafka==1.2.0
 pytest-html==2.0.1
 PyYAML==5.2
 jinja2==2.10.3
-asyncmock==0.4.1
 asynctest==0.13.0
 pytest-asyncio==0.10.0
 xmltodict==0.12.0
@@ -73,6 +72,7 @@ numpy==1.18.1
 pytest-timeout==1.3.4
 Faker==4.0.1
 python-socketio==4.4.0
+mock==4.0.0
 git+https://github.com/tomoncle/prometheus-http-client@master#prometheus-http-client
 ipdb
 rpyc
