--- a/requirements3.txt
+++ b/requirements3.txt
@@ -66,6 +66,7 @@ pytest-asyncio==0.10.0
 xmltodict==0.12.0
 defaultlist==1.0.0
 aiohttp==3.6.2
+pytest-aiohttp==0.3.0
 psycopg2==2.8.4
 av==6.2.0
 numpy==1.18.1
