--- a/requirements3.txt
+++ b/requirements3.txt
@@ -77,3 +77,7 @@ mock==4.0.0
 git+https://github.com/tomoncle/prometheus-http-client@master#prometheus-http-client
 ipdb
 rpyc
+pandas
+matplotlib
+torch
+sklearn
