vms: add method to modify all routes for interface.
In this patch we add ability to modify all routes for specific
interface.
It will be used to actually change metric on existing hw interface to
set it higher than metric on macvlan interface

--- a/Dockerfile.hypervisor
+++ b/Dockerfile.hypervisor
@@ -3,7 +3,7 @@ FROM ubuntu:18.04
 RUN  apt update -y && \
      DEBIAN_FRONTEND=noninteractive apt install -y python3.7\
      libvirt-daemon python3-libvirt python3-pip iproute2 xfsprogs genisoimage\
-     sudo pciutils kmod &&\
+     sudo pciutils kmod ifmetric &&\
      apt-get -y autoclean && \
      apt-get -y autoremove
 
